--- a/index.html
+++ b/index.html
@@ -209,9 +209,9 @@
 
             <!--Links-->
             <section>
-                <a target="_bLank" href="https://rank-fortress-digital-agency.github.io/alamoheatingandcoolinginc-06-22/">https://rank-fortress-digital-agency.github.io/alamoheatingandcoolinginc-06-22/</a><br>
-                <a target="_bLank" href="http://alamoheatingandcoolinginc-06-22.s3-website.ap-northeast-2.amazonaws.com">http://alamoheatingandcoolinginc-06-22.s3-website.ap-northeast-2.amazonaws.com</a><br>
-                <a target="_bLank" href="https://loquacious-torrone-f2e4c1.netlify.app/">https://loquacious-torrone-f2e4c1.netlify.app/</a><br>
+                <a target="_bLank" href="https://rank-fortress-digital-agency.github.io/alamoheatingandcoolinginc-07-22/">https://rank-fortress-digital-agency.github.io/alamoheatingandcoolinginc-07-22/</a><br>
+                <a target="_bLank" href="http://alamoheatingandcoolinginc-07-22.s3-website-us-east-1.amazonaws.com">http://alamoheatingandcoolinginc-07-22.s3-website-us-east-1.amazonaws.com</a><br>
+                <a target="_bLank" href="https://funny-croissant-19dce6.netlify.app/">https://funny-croissant-19dce6.netlify.app/</a><br>
                 <a target="_bLank" href="https://sites.google.com/view/alamoheatingandcoolinginc/">https://sites.google.com/view/alamoheatingandcoolinginc/</a><br>
             </section>
 
